# bfjit

./: Cargo.toml
programs/: hanoi.bf
src/: interpreter.rs  jit_compiler.rs  main.rs  tokenizer.rs
