[package]
name = "bfjit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
memmap2 = "0.9.4"
